--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts",
-    "build": "bun build src/index.ts --outdir ./dist --target node"
+    "build": "bun build src/index.ts --outdir ./dist --target node",
+    "prod": "NODE_ENV=production bun run ./dist/index.js"
   },
   "dependencies": {
     "@elysiajs/cors": "^1.1.1",
